SERVER-7355 (1/5) Factored out insert function in mongoimport